add assets and finishing project

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </svg>
                     <a href="">Messages</a>
                 </li>
-                <li> 
+                <li>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
                         class="feather feather-bell">
@@ -121,8 +121,113 @@
                 </li>
             </ul>
         </nav>
-
     </aside>
+
+    <main>
+        <div class="search-bar">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-search">
+                <circle cx="11" cy="11" r="8"></circle>
+                <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+            </svg>
+            <input type="text" placeholder="Search artists, playlists or tracks" />
+        </div>
+
+        <div class="main-panel">
+            <h3>Featured Playlists</h3>
+
+            <div class="main-carrousel-tracks">
+                <div class="card">
+                    <img src="img/playlist1.jpg" alt="">
+                    <h4>y STARDUST</h4>
+                    <label>24 tracks</label>
+                </div>
+                <div class="card">
+                    <img src="img/playlist2.jpg" alt="">
+                    <h4>Mike Vella</h4>
+                    <label>12 tracks</label>
+                </div>
+                <div class="card">
+                    <img src="img/playlist3.jpg" alt="">
+                    <h4>the best singles s2</h4>
+                    <label>163 tracks</label>
+                </div>
+                <div class="card">
+                    <img src="img/playlist4.jpg" alt="">
+                    <h4>Indie</h4>
+                    <label>138 tracks</label>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="profile-views">
+            <h4>Profile Views</h4>
+
+            <div class="profile">
+                <img src="img/view1.jpg" alt="">
+                <div>
+                    <h3>Jenny Villa</h3>
+
+                    <td> 1 day ago</td>
+                    <td>4 albums</td>
+
+                </div>
+
+            </div>
+
+            <div class="profile">
+                <img src="img/view2.jpg" alt="">
+                <div>
+                    <h3>Jenny Villa</h3>
+
+                    <td> 1 day ago</td>
+                    <td>4 albums</td>
+
+                </div>
+            </div>
+
+            <div class="profile">
+                <img src="img/view3.jpg" alt="">
+                <div>
+                    <h3>Jenny Villa</h3>
+
+                    <td> 1 day ago</td>
+                    <td>4 albums</td>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="tracks">
+            <h4>Tracks</h4>
+
+            <div class="footer-carrousel-tracks">
+                <div class="card">
+                    <img src="img/track7.jpg" alt="">
+                    <h4>y STARDUST</h4>
+                    <label>24 tracks</label>
+                </div>
+                <div class="card">
+                    <img src="img/track2.jpg" alt="">
+                    <h4>Mike Vella</h4>
+                    <label>12 tracks</label>
+                </div>
+                <div class="card">
+                    <img src="img/track3.jpg" alt="">
+                    <h4>the best singles s2</h4>
+                    <label>163 tracks</label>
+                </div>
+                <div class="card">
+                    <img src="img/track4.jpg" alt="">
+                    <h4>Indie</h4>
+                    <label>138 tracks</label>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
